@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="skin.aeonmq5.nexusmod" name="Aeon MQ 5 Omegamod" provider-name="MarcosQui / scott967" version="13.7.0">
+<addon id="skin.aeonmq5.omegamod" name="Aeon MQ 5 Omegamod" provider-name="MarcosQui / scott967" version="13.7.0">
 	<requires>
 		<import addon="xbmc.gui" version="5.17.0" />
 		<import addon="script.artistslideshow" version="3.3.0" />
@@ -26,50 +26,49 @@
 		<res aspect="21:9" default="false" folder="xml" height="1080" width="2560" />
 	</extension>
 	<extension point="xbmc.addon.metadata">
-		<summary lang="en_GB">Aeon MQ 5 Nexusmod, improved, more light and more powerful than ever.</summary>
-		<summary lang="pt_BR">Aeon MQ 5 Nexusmod, melhorada, mais leve e mais poderosa do que nunca.</summary>
-		<summary lang="pt_PT">Aeon MQ 5 Nexusmod, melhorada, mais leve e mais poderosa do que nunca.</summary>
-		<summary lang="el_GR">Aeon MQ 5 Nexusmod, βελτιωμένο, πιο ελαφρύ και πιο ισχυρό από ποτέ.</summary>
-		<summary lang="en_GB">Aeon MQ 5 Nexusmod, improved, more light and more powerful than ever.</summary>
-		<summary lang="es_ES">Aeon MQ 5 Nexusmod, mejor, más ligero y más potente que nunca</summary>
-		<summary lang="es_AR">Aeon MQ 5 Nexusmod, mejor, más ligero y más potente que nunca</summary>
-		<summary lang="es_MX">Aeon MQ 5 Nexusmod, mejor, más ligero y más potente que nunca</summary>
-		<summary lang="fi_FI">Aeon MQ 5 Nexusmod, kehittyneempi, kevyempi ja tehokkaampi kuin koskaan aikaisemmin.</summary>
-		<summary lang="fr_FR">Aeon MQ 5 Nexusmod, amélioré, plus léger et plus puissant que jamais.</summary>	
-		<summary lang="it_IT">Aeon MQ 5 Nexusmod, migliore, più leggero e più potente che mai.</summary>	
-		<summary lang="ja_JP">Aeon MQ 5 Nexusmod。更に優れた、更に軽く、更にパワフル。</summary>	
+		<summary lang="en_GB">Aeon MQ 5 Omegamod, improved, more light and more powerful than ever.</summary>
+		<summary lang="pt_BR">Aeon MQ 5 Omegamod, melhorada, mais leve e mais poderosa do que nunca.</summary>
+		<summary lang="pt_PT">Aeon MQ 5 Omegamod, melhorada, mais leve e mais poderosa do que nunca.</summary>
+		<summary lang="el_GR">Aeon MQ 5 Omegamod, βελτιωμένο, πιο ελαφρύ και πιο ισχυρό από ποτέ.</summary>
+		<summary lang="en_GB">Aeon MQ 5 Omegamod, improved, more light and more powerful than ever.</summary>
+		<summary lang="es_ES">Aeon MQ 5 Omegamod, mejor, más ligero y más potente que nunca</summary>
+		<summary lang="es_AR">Aeon MQ 5 Omegamod, mejor, más ligero y más potente que nunca</summary>
+		<summary lang="es_MX">Aeon MQ 5 Omegamod, mejor, más ligero y más potente que nunca</summary>
+		<summary lang="fi_FI">Aeon MQ 5 Omegamod, kehittyneempi, kevyempi ja tehokkaampi kuin koskaan aikaisemmin.</summary>
+		<summary lang="fr_FR">Aeon MQ 5 Omegamod, amélioré, plus léger et plus puissant que jamais.</summary>	
+		<summary lang="it_IT">Aeon MQ 5 Omegamod, migliore, più leggero e più potente che mai.</summary>	
+		<summary lang="ja_JP">Aeon MQ 5 Omegamod。更に優れた、更に軽く、更にパワフル。</summary>	
 		<summary lang="ko_KR">더욱 가볍게 더욱 강력하게 개선된 Aeon MQ5.</summary>	
-		<summary lang="nl_NL">Aeon MQ 5 Nexusmod, verbeterd, lichter en krachtiger dan ooit.</summary>
+		<summary lang="nl_NL">Aeon MQ 5 Omegamod, verbeterd, lichter en krachtiger dan ooit.</summary>
 		<summary lang="pl_PL">Aeon  MQ 5, ulepszona, jeszcze lżejsza i potężniejsza niż kiedykolwiek wcześniej.</summary>
-		<summary lang="pt_BR">Aeon MQ 5 Nexusmod, melhorada, mais leve e mais poderosa do que nunca.</summary>
-		<summary lang="ru_RU">Aeon MQ 5 Nexusmod, улучшенный, более легкий и мощный чем когда-либо.</summary>
-		<summary lang="sv_SE">Aeon MQ 5 Nexusmod, förbättrat, lättare och kraftfullare än någonsin.</summary>
-		<summary lang="th_TH">Aeon MQ 5 Nexusmod, พัฒนาขึ้น, เบาและมีประสิทธิภาพยิ่งขึ้นกว่าแต่ก่อน.</summary>
-		<description lang="en_GB">The traditional Aeon MQ reaches its fifth edition.[CR]Reformulated, very simple to use, with a new code that provides a lightweight and powerful skin.[CR]The Aeon MQ 5 Nexusmod incorporates new features such as REPLACE which takes the main menu's level of customization to something never seen before.[CR]Aeon MQ 5 Nexusmod, you've never seen a skin like this.</description>
-		<description lang="pt_br">A tradicional Aeon MQ chega a sua quinta edição.[CR]Reformulada, muito simples de usar, com um código novo que proporciona uma skin leve e poderosa.[CR]A Aeon MQ 5 Nexusmod incorpora novos recursos como o SUBSTITUIR que leva o nível de customização do menu principal a algo nunca antes visto.[CR]Aeon MQ 5 Nexusmod, você nunca viu uma skin assim.</description>
-		<description lang="pt_PT">A tradicional Aeon MQ chega a sua quinta edição.[CR]Reformulada, muito simples de usar, com um código novo que proporciona uma skin leve e poderosa.[CR]A Aeon MQ 5 Nexusmod incorpora novos recursos como o SUBSTITUIR que leva o nível de customização do menu principal a algo nunca antes visto.[CR]Aeon MQ 5 Nexusmod, você nunca viu uma skin assim.</description>
-		<description lang="el_GR">Το κλασικό Aeon MQ έφτασε στην πέμπτη έκδοσή του.[CR]Γραμμένο ξανά από τη βάση, πολύ απλό στη χρήση, με έναν νέο κώδικα που προσφέρει ένα ελαφρύ και ισχυρό κέλυφος.[CR]Το Aeon MQ 5 Nexusmod ενσωματώνει νέες λειτουργίες όπως η ΑΝΤΙΚΑΤΑΣΤΑΣΗ, και ανυψώνει την προσαρμοστικότητα του κεντρικού μενού σε νέα επίπεδα.[CR]Aeon MQ 5 Nexusmod, δεν έχετε ξαναδεί τέτοιο κέλυφος.</description>
-		<description lang="en_GB">The traditional Aeon MQ reaches its fifth edition.[CR]Reformulated, very simple to use, with a new code that provides a lightweight and powerful skin.[CR]The Aeon MQ 5 Nexusmod incorporates new features such as REPLACE which takes the main menu's level of customization to something never seen before.[CR]Aeon MQ 5 Nexusmod, you've never seen a skin like this.</description>
-		<description lang="es_ES">El tradicional Aeon MQ llega a su quinta edición.[CR]reformulada, muy sencillo de usar, con un nuevo código que proporciona un skin más ligero y potente.[CR]El Aeon MQ 5 Nexusmod incorpora nuevas funciones como REPLACE que permite  personalizar el menú principal a un nivel nunca visto antes.[CR]Aeon MQ 5 Nexusmod,  nunca has visto un skin tan bueno.</description>
-		<description lang="es_AR">El tradicional Aeon MQ llega a su quinta edición.[CR]reformulada, muy sencillo de usar, con un nuevo código que proporciona un skin más ligero y potente.[CR]El Aeon MQ 5 Nexusmod incorpora nuevas funciones como REPLACE que permite  personalizar el menú principal a un nivel nunca visto antes.[CR]Aeon MQ 5 Nexusmod,  nunca has visto un skin tan bueno.</description>
-		<description lang="es_MX">El tradicional Aeon MQ llega a su quinta edición.[CR]reformulada, muy sencillo de usar, con un nuevo código que proporciona un skin más ligero y potente.[CR]El Aeon MQ 5 Nexusmod incorpora nuevas funciones como REPLACE que permite  personalizar el menú principal a un nivel nunca visto antes.[CR]Aeon MQ 5 Nexusmod,  nunca has visto un skin tan bueno.</description>
-		<description lang="fi_FI">Perinteinen Aeon MQ on saavuttanut viidennen versionsa.[CR]Uudelleen suunniteltu ja helppokäyttöinen ulkoasu on uuden koodin myötä kevyt ja tehokas.[CR]Aeon MQ 5 Nexusmod sisältää uusia ominaisuuksia, kuten KORVAUS, joka vie päävalikon mukauttamisen aivan uudelle tasolle.[CR]Aeon MQ 5 Nexusmod, et ole koskaan aistinut ulkoasua näin hyvin.</description>
-		<description lang="fr_FR">Le  traditionnel Aeon MQ atteint sa cinquième édition.[CR]Nouvelle formule, très simple à utiliser, avec un nouveau code qui permet un thème léger et puissant.[CR]Aeon MQ 5 Nexusmod intègre de nouvelles fonctionnalités telles que REMPLACER et porte le niveau de personnalisation du menu principal à un niveau jamais vu auparavant.[CR]Aeon MQ 5 Nexusmod, vous n'avez jamais vu un thème comme celui-là.</description>
-		<description lang="it_IT">Il tradizionale Aeon MQ raggiunge la sua quinta edizione.[CR]Riformulata, molto semplice da usare, con un nuovo codice che fornisce una skin leggera e potente.[CR]L' Aeon MQ 5 Nexusmod incorpora nuove caratteristiche come SOSTITUISCI questo rende il livello di personalizzare nel menu principale qualcosa di mai visto prima.[CR] Aeon MQ 5 Nexusmod, non hai mai visto una skin migliore.</description>
+		<summary lang="pt_BR">Aeon MQ 5 Omegamod, melhorada, mais leve e mais poderosa do que nunca.</summary>
+		<summary lang="ru_RU">Aeon MQ 5 Omegamod, улучшенный, более легкий и мощный чем когда-либо.</summary>
+		<summary lang="sv_SE">Aeon MQ 5 Omegamod, förbättrat, lättare och kraftfullare än någonsin.</summary>
+		<summary lang="th_TH">Aeon MQ 5 Omegamod, พัฒนาขึ้น, เบาและมีประสิทธิภาพยิ่งขึ้นกว่าแต่ก่อน.</summary>
+		<description lang="en_GB">The traditional Aeon MQ reaches its fifth edition.[CR]Reformulated, very simple to use, with a new code that provides a lightweight and powerful skin.[CR]The Aeon MQ 5 Omegamod incorporates new features such as REPLACE which takes the main menu's level of customization to something never seen before.[CR]Aeon MQ 5 Omegamod, you've never seen a skin like this.</description>
+		<description lang="pt_br">A tradicional Aeon MQ chega a sua quinta edição.[CR]Reformulada, muito simples de usar, com um código novo que proporciona uma skin leve e poderosa.[CR]A Aeon MQ 5 Omegamod incorpora novos recursos como o SUBSTITUIR que leva o nível de customização do menu principal a algo nunca antes visto.[CR]Aeon MQ 5 Omegamod, você nunca viu uma skin assim.</description>
+		<description lang="pt_PT">A tradicional Aeon MQ chega a sua quinta edição.[CR]Reformulada, muito simples de usar, com um código novo que proporciona uma skin leve e poderosa.[CR]A Aeon MQ 5 Omegamod incorpora novos recursos como o SUBSTITUIR que leva o nível de customização do menu principal a algo nunca antes visto.[CR]Aeon MQ 5 Omegamod, você nunca viu uma skin assim.</description>
+		<description lang="el_GR">Το κλασικό Aeon MQ έφτασε στην πέμπτη έκδοσή του.[CR]Γραμμένο ξανά από τη βάση, πολύ απλό στη χρήση, με έναν νέο κώδικα που προσφέρει ένα ελαφρύ και ισχυρό κέλυφος.[CR]Το Aeon MQ 5 Omegamod ενσωματώνει νέες λειτουργίες όπως η ΑΝΤΙΚΑΤΑΣΤΑΣΗ, και ανυψώνει την προσαρμοστικότητα του κεντρικού μενού σε νέα επίπεδα.[CR]Aeon MQ 5 Omegamod, δεν έχετε ξαναδεί τέτοιο κέλυφος.</description>
+		<description lang="en_GB">The traditional Aeon MQ reaches its fifth edition.[CR]Reformulated, very simple to use, with a new code that provides a lightweight and powerful skin.[CR]The Aeon MQ 5 Omegamod incorporates new features such as REPLACE which takes the main menu's level of customization to something never seen before.[CR]Aeon MQ 5 Omegamod, you've never seen a skin like this.</description>
+		<description lang="es_ES">El tradicional Aeon MQ llega a su quinta edición.[CR]reformulada, muy sencillo de usar, con un nuevo código que proporciona un skin más ligero y potente.[CR]El Aeon MQ 5 Omegamod incorpora nuevas funciones como REPLACE que permite  personalizar el menú principal a un nivel nunca visto antes.[CR]Aeon MQ 5 Omegamod,  nunca has visto un skin tan bueno.</description>
+		<description lang="es_AR">El tradicional Aeon MQ llega a su quinta edición.[CR]reformulada, muy sencillo de usar, con un nuevo código que proporciona un skin más ligero y potente.[CR]El Aeon MQ 5 Omegamod incorpora nuevas funciones como REPLACE que permite  personalizar el menú principal a un nivel nunca visto antes.[CR]Aeon MQ 5 Omegamod,  nunca has visto un skin tan bueno.</description>
+		<description lang="es_MX">El tradicional Aeon MQ llega a su quinta edición.[CR]reformulada, muy sencillo de usar, con un nuevo código que proporciona un skin más ligero y potente.[CR]El Aeon MQ 5 Omegamod incorpora nuevas funciones como REPLACE que permite  personalizar el menú principal a un nivel nunca visto antes.[CR]Aeon MQ 5 Omegamod,  nunca has visto un skin tan bueno.</description>
+		<description lang="fi_FI">Perinteinen Aeon MQ on saavuttanut viidennen versionsa.[CR]Uudelleen suunniteltu ja helppokäyttöinen ulkoasu on uuden koodin myötä kevyt ja tehokas.[CR]Aeon MQ 5 Omegamod sisältää uusia ominaisuuksia, kuten KORVAUS, joka vie päävalikon mukauttamisen aivan uudelle tasolle.[CR]Aeon MQ 5 Omegamod, et ole koskaan aistinut ulkoasua näin hyvin.</description>
+		<description lang="fr_FR">Le  traditionnel Aeon MQ atteint sa cinquième édition.[CR]Nouvelle formule, très simple à utiliser, avec un nouveau code qui permet un thème léger et puissant.[CR]Aeon MQ 5 Omegamod intègre de nouvelles fonctionnalités telles que REMPLACER et porte le niveau de personnalisation du menu principal à un niveau jamais vu auparavant.[CR]Aeon MQ 5 Omegamod, vous n'avez jamais vu un thème comme celui-là.</description>
+		<description lang="it_IT">Il tradizionale Aeon MQ raggiunge la sua quinta edizione.[CR]Riformulata, molto semplice da usare, con un nuovo codice che fornisce una skin leggera e potente.[CR]L' Aeon MQ 5 Omegamod incorpora nuove caratteristiche come SOSTITUISCI questo rende il livello di personalizzare nel menu principale qualcosa di mai visto prima.[CR] Aeon MQ 5 Omegamod, non hai mai visto una skin migliore.</description>
 		<description lang="ko_KR">전통의 Aeon MQ가 다섯번째 판에 이르렀습니다.[CR]가벼우면서도 강력한 기능을 제공하는 새로운 코드로 사용하기에 매우 간편하게 다시 만들어졌습니다.[CR]Aeon MQ5는 지금까지 한 번도 본적 없는 메인메뉴 바꾸기 같은 새로운 기능을 포함합니다.[CR]Seon MQ 5, 한 번도 보지 못했던 스킨입니다.전통의 Aeon MQ가 다섯번째 판에 이르렀습니다.[CR]가벼우면서도 강력한 기능을 제공하는 새로운 코드로 사용하기에 매우 간편하게 다시 만들어졌습니다.[CR]Aeon MQ5는 지금까지 한 번도 본적 없는 메인메뉴 바꾸기 같은 새로운 기능을 포함합니다.[CR]Seon MQ 5, 한 번도 보지 못했던 스킨입니다.</description>
-		<description lang="nl_NL">De traditionele Aeon MQ bereikt zijn vijfde editie.[CR]Hercodeerd, makkelijk in gebruik, met een code zorgt voor een snelle, sterke skin.[CR]De Aeon MQ5 bevat nieuwe eigenschappen zoals VERVANGEN brengt de aanpasbaarheid van het hoofdmenu tot ongekende hoogtes.[CR]Aeon MQ 5 Nexusmod, je hebt nog nooit zo'n goede skin gezien.</description>
-		<description lang="pl_PL">Tradycyjny Aeon MQ doczekał się piątej edycji.[CR]Przebudowany, łatwy do użycia, z nowym kodem, którego wynikiem jest lekka i potężna skóra.[CR]Aeon MQ5 oferuje nowe funkcje takie jak ZAMIANA, które umożliwiają dostosowywanie głównego menu do nieznanego wcześniej poziomu.[CR]Aeon MQ 5 Nexusmod, nigdy nie widziałeś lepszej skóry.</description>
-		<description lang="pt_br">A tradicional Aeon MQ chega a sua quinta edição.[CR]Reformulada, muito simples de usar, com um código novo que proporciona uma skin leve e poderosa.[CR]A Aeon MQ 5 Nexusmod incorpora novos recursos como o SUBSTITUIR que leva o nível de customização do menu principal a algo nunca antes visto.[CR]Aeon MQ 5 Nexusmod, você nunca viu uma skin assim.</description>
-		<description lang="ru_RU">Традиционный Aeon MQ достиг своей пятой версии.[CR]Переформулированный, очень простой в использовании, с новым кодом, который обеспечивает легкость и мощность обложки.[CR]Aeon MQ 5 Nexusmod включает новые функции, такие как ПЕРЕМЕЩЕНИЕ, делающие уровень настройки главного меню не виданным ранее.[CR]Aeon MQ 5 Nexusmod, вы не  найдете обложку лучше.</description>
-		<description lang="th_TH">จากแบบตั้งเดิมของ Aeon MQ ได้มาถึงรุ่นที่ห้า.[CR]ได้ถูกยกเครื่องใหม่, ง่ายต่อการใช้งาน, ด้วยคำสั่งใหม่ ที่นำมาซึ่ง สกินที่เบาและและมีประสิทธิภาพ.[CR]Aeon MQ 5 Nexusmod ประกอบด้วยคุณสมบัติใหม่ ๆ เช่น การแทนที่ ซึ่งนำระดับการปรับแต่งเมนูหลัก ไปสู่บางสิ่งที่ไม่เคยพบมาก่อน.[CR]Aeon MQ 5, คุณคงไม่เคยเห็นสกินที่ดีเช่นนี้.</description>
+		<description lang="nl_NL">De traditionele Aeon MQ bereikt zijn vijfde editie.[CR]Hercodeerd, makkelijk in gebruik, met een code zorgt voor een snelle, sterke skin.[CR]De Aeon MQ5 bevat nieuwe eigenschappen zoals VERVANGEN brengt de aanpasbaarheid van het hoofdmenu tot ongekende hoogtes.[CR]Aeon MQ 5 Omegamod, je hebt nog nooit zo'n goede skin gezien.</description>
+		<description lang="pl_PL">Tradycyjny Aeon MQ doczekał się piątej edycji.[CR]Przebudowany, łatwy do użycia, z nowym kodem, którego wynikiem jest lekka i potężna skóra.[CR]Aeon MQ5 oferuje nowe funkcje takie jak ZAMIANA, które umożliwiają dostosowywanie głównego menu do nieznanego wcześniej poziomu.[CR]Aeon MQ 5 Omegamod, nigdy nie widziałeś lepszej skóry.</description>
+		<description lang="pt_br">A tradicional Aeon MQ chega a sua quinta edição.[CR]Reformulada, muito simples de usar, com um código novo que proporciona uma skin leve e poderosa.[CR]A Aeon MQ 5 Omegamod incorpora novos recursos como o SUBSTITUIR que leva o nível de customização do menu principal a algo nunca antes visto.[CR]Aeon MQ 5 Omegamod, você nunca viu uma skin assim.</description>
+		<description lang="ru_RU">Традиционный Aeon MQ достиг своей пятой версии.[CR]Переформулированный, очень простой в использовании, с новым кодом, который обеспечивает легкость и мощность обложки.[CR]Aeon MQ 5 Omegamod включает новые функции, такие как ПЕРЕМЕЩЕНИЕ, делающие уровень настройки главного меню не виданным ранее.[CR]Aeon MQ 5 Omegamod, вы не  найдете обложку лучше.</description>
+		<description lang="th_TH">จากแบบตั้งเดิมของ Aeon MQ ได้มาถึงรุ่นที่ห้า.[CR]ได้ถูกยกเครื่องใหม่, ง่ายต่อการใช้งาน, ด้วยคำสั่งใหม่ ที่นำมาซึ่ง สกินที่เบาและและมีประสิทธิภาพ.[CR]Aeon MQ 5 Omegamod ประกอบด้วยคุณสมบัติใหม่ ๆ เช่น การแทนที่ ซึ่งนำระดับการปรับแต่งเมนูหลัก ไปสู่บางสิ่งที่ไม่เคยพบมาก่อน.[CR]Aeon MQ 5, คุณคงไม่เคยเห็นสกินที่ดีเช่นนี้.</description>
 		<platform>all</platform>	
 		<assets>
 			<icon>resources/icon.png</icon>
 			<fanart>resources/fanart.jpg</fanart>
 		</assets>
 		<news>[B][COLOR=FFFF8C00]BUILD 13.7.0- RELEASE DATE 2023-10-31 for Kodi OMEGA 22.0 Beta 2 nightlies[/COLOR][/B]
-This is a MOD of Aeon MQ5 by user scott967.  Compatible with Kodi Nexus release 21.0 Beta 2 plus 
-Equivalent to Aeon MQ5 NexusMod 12.7.0
+This is a MOD of Aeon MQ5 by user scott967.  Compatible with Kodi Omega release 21.0 Beta 2 plus 
 		</news>
 	</extension>
 
