@@ -10,7 +10,7 @@
 <includes>
 	<!-- ################################################ Value/General ################################################ -->
 	<variable name="SkinVersion">
-		<value>13.7.0 Omegamod[COLOR=80FFFFFF] | [/COLOR]10/31/2023</value>
+		<value>13.7.0 Omegamod[COLOR=80FFFFFF] | [/COLOR]12/15/2023</value>
 	</variable>
 	<variable name="Sub_GoTo">
 		<value condition="String.IsEqual(Container(9000).ListItem.Property(subid),movies)">6001</value>
